<resources>
    <string name="app_name">J-Go</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="open_text">Jogja Uncovered</string>
    <string name="sign_in">Sign In</string>
    <string name="hii_welcome_back_you_ve_been_missed">Hii Welcome back, you’ve been missed</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email ( @gmail.com )</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="fill_your_information">Fill your information</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="filter">Filter</string>
    <string name="search_filter">Search Filter</string>
    <string name="applied_filters">Applied filters</string>
    <string name="bahari">Bahari</string>
    <string name="category">Category</string>
    <string name="budaya">Culture</string>
    <string name="taman_hiburan">Amusement Park</string>
    <string name="price">Price</string>
    <string name="min">Min Price</string>
    <string name="max">Max Price</string>
    <string name="rate">Rate</string>
    <string name="_5_star">5 star</string>
    <string name="_4_star">4 star</string>
    <string name="_3_star">3 star</string>
    <string name="_2_star">2 star</string>
    <string name="_1_star">1 star</string>
    <string name="use">Use</string>
    <string name="reset">Reset</string>
    <string name="rate_this_place">Rate This Place!</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="merapi_mountain">Merapi Mountain</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="sleman_diy">Sleman, DIY</string>
    <string name="deskripsi">Gunung Merapi adalah gunung berapi paling aktif di Indonesia, yang menawarkan panorama indah dan pengalaman mendaki yang menantang. Gunung Merapi adalah gunung berapi paling aktif di Indonesia, yang menawarkan panorama indah dan pengalaman mendaki yang menantang</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_password_empty">Password tidak boleh kosong</string>
    <string name="error_name_empty">Nama tidak boleh kosong</string>
    <string name="login_success">Login berhasil</string>
    <string name="login_failed">Login gagal</string>
    <string name="register_success">Registrasi Success</string>
    <string name="logo_applikasi">Logo applikasi</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="jenis">Jenis</string>
    <string name="harga">Harga</string>
    <string name="submitfeed">SUBMIT FEEDBACK</string>
    <string name="submitrate">RATE THIS PLACE!</string>
    <string name="rating">Rating</string>
    <string name="name_required">Name cannot be empty</string>
    <string name="email_required">Email must not be empty</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="password_required">Password cannot be empty</string>
    <string name="password_too_short">Password must be at least 8 characters</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_success">Successful registration!</string>
    <string name="profil">Profile</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="emailprofile">qwertyuiop@gmail.com</string>
    <string name="logout">LOGOUT</string>
    <string name="error_fetch_user_data">Gagal mengambil data pengguna</string>
</resources>