<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filter"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Applied Filters -->
    <TextView
        android:id="@+id/appliedFiltersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applied_filters"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/appliedFiltersGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appliedFiltersLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBahari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahari"
            app:closeIconEnabled="true"
            app:closeIconTint="@color/main" />

    </com.google.android.material.chip.ChipGroup>

    <!-- Category -->
    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/appliedFiltersGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/categoryGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbBudaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budaya"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/rbBahari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahari"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/rbTamanHiburan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taman_hiburan" />
    </RadioGroup>

    <!-- Price -->
    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/categoryGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/priceInputGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/priceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/minPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/min"
            android:inputType="number"
            android:importantForAccessibility="yes"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/price_background"/>

        <EditText
            android:id="@+id/maxPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/max"
            android:inputType="number"
            android:importantForAccessibility="yes"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/price_background"/>

    </LinearLayout>


    <!-- Rate -->
    <TextView
        android:id="@+id/rateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/priceInputGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/rateGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/rateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button5Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rate_background"
            android:text="@string/_5_star" />

        <Button
            android:id="@+id/button4Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rate_backgound2"
            android:text="@string/_4_star" />

        <Button
            android:id="@+id/button3Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rate_backgound2"
            android:text="@string/_3_star" />

        <Button
            android:id="@+id/button2Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rate_backgound2"
            android:text="@string/_2_star" />

        <Button
            android:id="@+id/button1Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rate_backgound2"
            android:text="@string/_1_star" />
    </GridLayout>


    <!-- Buttons -->
    <Button
        android:id="@+id/useButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use"
        app:layout_constraintTop_toBottomOf="@id/rateGrid"
        android:background="@drawable/button_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/useButton"
        android:background="@drawable/button_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

