<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="50dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_applikasi"
            android:layout_marginBottom="16dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/signInSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hii_welcome_back_you_ve_been_missed"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp" />

        <!-- Email Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- Password Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:autofillHints="textPassword"
            android:background="@drawable/bg_edit_text"
            android:padding="12dp"
            android:layout_marginBottom="8dp" />

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="40dp"
            android:text="@string/forgot_password"
            android:textColor="#00838F"
            android:textSize="14sp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_rounded"
            android:padding="12dp"
            android:text="@string/sign_in"
            tools:ignore="TextContrastCheck" />


        <!-- Sign Up Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/signUpPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:textColor="@color/main"
                android:textStyle="bold"
                android:layout_marginStart="4dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
