<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ui.detail.DetailActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"
          android:src="@drawable/benteng"
          android:layout_marginTop="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:background="@drawable/rounded_img"
          android:clipToOutline="true"/>

      <ImageView
          android:layout_width="44dp"
          android:layout_height="44dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="35dp"
          android:scaleType="center"
          android:background="@drawable/rounded_img"
          android:src="@drawable/baseline_arrow_back_ios_24" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_tempat"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/urbanistbold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/urbanistbold"/>

      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/urbanistsemibold"
            android:textColor="#FFA000"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/urbanistsemibold"/>

      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="?android:attr/listDivider"
          android:layout_marginTop="16dp"/>

      <Spinner
          android:id="@+id/spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:minHeight="48dp"
          android:paddingVertical="12dp"
          android:layout_marginTop="16dp" />

      <TextView
          android:id="@+id/descriptionTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/deskripsi"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textSize="16sp"
          android:layout_marginTop="16dp"
          android:justificationMode="inter_word"
          android:fontFamily="@font/urbanistsemibold" />

      <EditText
          android:id="@+id/editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="@string/feedback"
          android:hint="@string/feedback"
          android:minHeight="48dp"
          android:padding="12dp"
          android:background="@drawable/bg_edit_text"
          android:textColor="#000000"
          android:textColorHint="#757575"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          android:fontFamily="@font/urbanist_regular"
          android:inputType="text"/>


      <com.google.android.material.button.MaterialButton
          style="@style/MainButton"
          android:id="@+id/button"
          android:textStyle="bold"
          android:text="@string/submitfeed" />

      <!-- RatingBar untuk memberi rating -->
      <android.widget.RatingBar
          android:id="@+id/ratingBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:numStars="5"
          android:stepSize="1"
          android:rating="0"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:layout_gravity="center"/>

      <com.google.android.material.button.MaterialButton
          style="@style/RateThisPlaceButton"
          android:id="@+id/buttonRate"
          android:textStyle="bold"
          android:text="@string/submitrate" />





    </LinearLayout>

  </LinearLayout>

</ScrollView>