<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/main"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalengkap"
                android:textSize="25sp"
                android:fontFamily="@font/urbanist_extrabold"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailprofile"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/urbanistsemibold"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_feedback"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            tools:listitem="@layout/item_history"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:layout_margin="16dp"
            android:layout_marginBottom="80dp"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_rounded"
            android:layout_gravity="bottom" />

    </LinearLayout>

</FrameLayout>